welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:5: error: ')' expected but 'else' found.
  }else{
   ^